# zipper

./: CMakeLists.txt  pyproject.toml  zipper.py
src/: main.cpp  obj.cpp  obj.h
src/seminar_hacivutzim/: __init__.py  __init__.pyi  _core.pyi
tests/: test_basic.py
